public/css/formStyle.css
/* ---------------------------------FORM ------------------------------------*/
.user-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 85vh;
  justify-content: space-around;
}

/*---------------------------- INPUT BOXES ------------------------------*/
.user-input-outer-wrap {
  /*this is what hides each part of the form - don't remove! (it's changed to display flex later)*/
  display: none;
  align-items: center;
}

.user-input {
  border-radius: 3rem;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border: 2px solid #ebfffb;
  background: #ffffff;
  font-family: Livvic, sans-serif;
  margin: 0 0 1.5rem 0;
  max-width: 20rem;
  font-size: 1rem;
  padding: 1rem;
  text-align: center; /*this keeps the text that user enters centered*/
  border: 1px solid black;
  border-radius: 2rem 2rem 3rem 3rem;
}

.user-input.invalid {
  background-color: #ffdddd;
}

.user-input-title {
  max-width: 100%;
  font-family: Fredoka One, sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 2rem;
  text-align: center;
  color: #f4ca18;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  margin-bottom: 2rem;
  -webkit-text-stroke: 1px black;
}

.user-input::placeholder {
  text-align: center;
  font-family: Livvic, sans-serif;
  color: #a2a1a1;
}

.time-and-date-wrap {
  display: flex;
  flex-direction: column;
}

.error {
  height: 1rem;
  color: #ff3a3a;
  font-family: Montserrat, sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 1rem;
  text-align: center;
}

/* --------------------------STEPS/PAGINATION DOTS ---------------------------*/
.step-wrap {
  display: flex;
  flex-direction: row;
  margin-bottom: 1rem;
}

.step {
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #f4ca18;
  border: 1px solid black;
  border-radius: 18px 7px 12px 10px;
  display: inline-block;
  /* opacity: 0.5; */
  /* box-shadow: inset 0 0 5px #6375b3; */
}

.step.active {
  opacity: 1;
  background-color: #ff3a3a;
}

.step.finish {
  background-color: #f4ca18;
}

/* -----------------------------RADIO BUTTONS -------------------------------*/
.radio-toolbar {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.radio-toolbar input[type="radio"] {
  opacity: 0;
  position: fixed;
  width: 0;
}

.radio-toolbar label {
  display: inline-block;
  margin-bottom: 0.8rem;
  border-radius: 3rem;
  padding: 0.8rem;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border: 1px solid black;
  background: #ffffff;
}

.radio-toolbar input[type="radio"]:checked + label {
  background-color: #f4ca18;
  border-color: black;
}

